--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
   </head>
   <body>
     <div class="container">
-      HEADER
+      <%= render 'home/header' %>
+      <% if notice %>
+        <%= render 'layouts/alerts' %>
+      <% end %>
+      <br/>
       <%= yield %>
-      FOOTER
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
