--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -31,6 +31,10 @@
     <%= form.text_field :phone, class:"form-control", placeholder:"phone" %>
   </div>
 
+  <div class="mb-3 field form-group">
+    <%= form.number_field :user_id, id: :friend_user_id, class:"form-control", value:current_user.id %>
+  </div>
+
   <div class="actions">
     <%= form.submit class:"btn btn-success"%>
   </div>
