--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -8,22 +8,26 @@
       <th>Email</th>
       <th>Twister</th>
       <th>Phone</th>
+      <th>User Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @friends.each do |friend| %>
-      <tr>
-        <td><%= friend.first_name %></td>
-        <td><%= friend.lastname %></td>
-        <td><%= friend.email %></td>
-        <td><%= friend.twister %></td>
-        <td><%= friend.phone %></td>
-        <td><%= link_to 'Show', friend %></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
-        <td><%= link_to 'Destroy', friend, :method=> :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <% if friend.user === current_user%>
+        <tr>
+          <td><%= friend.first_name %></td>
+          <td><%= friend.lastname %></td>
+          <td><%= friend.email %></td>
+          <td><%= friend.twister %></td>
+          <td><%= friend.phone %></td>
+          <td><%= friend.user_id %></td>
+          <td><%= link_to 'Show', friend %></td>
+          <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
+          <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
@@ -31,3 +35,4 @@
 <br>
 
 <%= link_to 'New Friend', new_friend_path, class:"btn btn-secondary" %>
+<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
