--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,36 +1,39 @@
-<h1>Friends</h1>
+<% if current_user %>
+  <h1>Friends</h1>
 
-<table class="table table-striped">
-  <thead class="thead-dark">  
-    <tr>
-      <th>First name</th>
-      <th>Lastname</th>
-      <th>Email</th>
-      <th>Twister</th>
-      <th>Phone</th>
-      <th>User Id</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <table class="table table-striped">
+    <thead class="thead-dark">  
+      <tr>
+        <th>First name</th>
+        <th>Email</th>
+        <th>Twister</th>
+        <th>Phone</th>
+        <th>User Id</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
 
-  <tbody>
-    <% @friends.each do |friend| %>
-      <% if friend.user === current_user%>
-        <tr>
-          <td><%= friend.first_name %></td>
-          <td><%= friend.lastname %></td>
-          <td><%= friend.email %></td>
-          <td><%= friend.twister %></td>
-          <td><%= friend.phone %></td>
-          <td><%= friend.user_id %></td>
-          <td><%= link_to 'Show', friend %></td>
-          <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
-          <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
+    <tbody>
+      <% @friends.each do |friend| %>
+        <% if friend.user === current_user%>
+          <tr>
+            <td><%= link_to friend.first_name + '' + friend.lastname, friend %></td>
+            <td><%= friend.email %></td>
+            <td><%= friend.twister %></td>
+            <td><%= friend.phone %></td>
+            <td><%= friend.user_id %></td>
+            <td><%= link_to 'Show', friend %></td>
+            <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
+            <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
       <% end %>
-    <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+<% else %>
+  <h1>Welcome to rails !</h1>
+  <p>Let try something here</p>
+<% end %>
 
 <br>
 
