--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -38,4 +38,8 @@
 <br>
 
 <%= link_to 'New Friend', new_friend_path, class:"btn btn-secondary" %>
-<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+<%
+=begin%>
+ <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %> 
+<%
+=end%>
